--- a/html/hzmj/download.html
+++ b/html/hzmj/download.html
@@ -70,6 +70,11 @@
             height: 100%;
         }
 
+        #swiper-slide {
+            width: 100%;
+            height: 100%;
+        }
+
         #ios-weixin-tip .close {
             color: #fff;
             padding: 5px;
