添加单独的下载页面

--- a/html/hzmj/download.html
+++ b/html/hzmj/download.html
@@ -20,11 +20,11 @@
 <p style="font-size: 14px; font-family: 微软雅黑; padding-top: 12px;">              微信不允许直接下载文件，请点击右上角分享按钮，选择在浏览器中打开, 或者复制链接到浏览器。
 </p>
 
- <table width="100%" cellspace="0">
+ <table width="100%" align="center">
     <tbody>
     <tr>
-        <td>
-             <table width="50%" style="float: left;margin: 0px;padding: 0px;">
+        <td width="50%" style="float: left;margin: 0px;padding: 0px;">
+             <table>
                 <tr>
                     <td>
                         <div id="main" style="min-width:300px!important; max-width:300px!important; margin:auto; overflow:hidden;">
@@ -32,7 +32,9 @@
                     </td>
                 </tr>
             </table>
-            <table width="50%" style="float: left;margin: 0px;padding: 0px;">
+        </td>
+        <td width="50%" style="float: left;margin: 0px;padding: 0px;">
+            <table>
                 <tr>
                     <td>
                         <div id="main" style="min-width:300px!important; max-width:300px!important; margin:auto; overflow:hidden;">
