添加信任证书教程

--- a/html/hzmj/download.html
+++ b/html/hzmj/download.html
@@ -21,7 +21,7 @@
 </p>
 <p style="font-size: 14px; font-family: 微软雅黑; padding-top: 12px;">
     <a href="http://download.cherryjoy.com/hzmj/zhengshu.html" >
-    IOS9以上系统安装教程
+    苹果手机IOS9以上系统安装教程
     </a>
 </p>
 
