--- a/html/hzmj/download2px.html
+++ b/html/hzmj/download2px.html
@@ -39,9 +39,9 @@ window.close();
                 };
             }(),
         }
-         var theUrl = 'http://hzmj.applinzi.com/cjhzmj.apk'
+         var theUrl = 'http://hzmj.applinzi.com/cjhzmj_peixian.apk'
         if(Terminal.platform.android){      
-            theUrl = 'http://hzmj.applinzi.com/cjhzmj.apk'
+            theUrl = 'http://hzmj.applinzi.com/cjhzmj_peixian.apk'
         }
     if(u_agent.indexOf('UCBrowser')>-1){ 
         //browser_name='UCBrowse'; 
