--- a/html/hzmj/downloadpx.html
+++ b/html/hzmj/downloadpx.html
@@ -49,7 +49,7 @@
                     <td>
                         <div class="li odd">
                             <img class="doc" src="http://hzmj.applinzi.com/res/ios.jpg" />
-                            <a href="https://fir.im/hzapple" title="ios">
+                            <a href="https://fir.im/hzapplepx" title="ios">
                                 <img class="doc" src="http://hzmj.applinzi.com/res/iosbutton.png" />
                             </a>
                         </div>
@@ -84,9 +84,9 @@
                     tip.style.display = "none";
                 }
             } else {
-                window.location.href = "./jump.html";
+                window.location.href = "./jumppx.html";
                 return;
-                doLocation("./jump.html");
+                doLocation("./jumppx.html");
             }
         }
     
